# SqlAgentValidator

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts
artifacts/api-server/src/routes/: index.ts  sql-agent.ts
artifacts/api-server/src/sql-agent/: graph.ts  state.ts  table-registry.ts
artifacts/api-server/src/sql-agent/agents/: schema-extractor.ts  sql-generator.ts  sql-validator.ts
artifacts/fastapi-server/: LOCAL_SETUP.md  graph.py  hana_connection.py  main.py  requirements.txt  state.py  table_registry.py
artifacts/fastapi-server/agents/: schema_extractor.py  sql_generator.py  sql_validator.py
artifacts/sql-agent-ui/: index.html  package.json  requirements.yaml
artifacts/sql-agent-ui/.replit-artifact/: artifact.toml
artifacts/sql-agent-ui/src/: App.tsx  index.css
artifacts/sql-agent-ui/src/components/: Sidebar.tsx  ui.tsx
artifacts/sql-agent-ui/src/hooks/: use-sql-agent.ts
artifacts/sql-agent-ui/src/lib/: utils.ts
artifacts/sql-agent-ui/src/pages/: Home.tsx  not-found.tsx
lib/api-spec/: openapi.yaml
